20 July 2009: Wouter
	- Ignore transient sendto errors, no route to host, and host, net down.
	- contrib/update-anchor.sh has -r option for root-hints.
	- feature val-log-level: 1 prints validation failures so you can
	  keep track of them during dnssec deployment.

16 July 2009: Wouter
	- fix replacement malloc code.  Used in crosscompile.
	- makedist -w creates crosscompiled setup.exe on fedora11.

15 July 2009: Wouter
	- dependencies for compat items, for crosscompile.
	- mingw32 crosscompile changes, dependencies and zipfile creation.
	  and with System.dll from the windows NSIS you can make setup.exe.
	- package libgcc_s_sjlj exception handler for NSISdl.dll.

14 July 2009: Wouter
	- updated ldns tarball for solaris x64 compile assistance.
	- no need to define RAND_MAX from config.h.
	- iana portlist updated.
	- configure changes and ldns update for mingw32 crosscompile.

13 July 2009: Wouter
	- Fix for crash at start on windows.
	- tag for release 1.3.2.
	- trunk has version 1.3.3.
	- Fix for ID bits on windows to use all 16. RAND_MAX was not
	  defined like you'd expect on mingw. Reported by Mees de Roo.

9 July 2009: Wouter
	- tag for release 1.3.1.
	- trunk has version 1.3.2.

7 July 2009: Wouter
	- iana portlist updated.

6 July 2009: Wouter
	- prettier error handling in SSL setup.
	- makedist.sh uname fix (same as ldns).
	- updated fedora spec file.

3 July 2009: Wouter
	- fixup linking when ldnsdir is "".

30 June 2009: Wouter
	- more lenient truncation checks.

29 June 2009: Wouter
	- ldns trunk r2959 imported as tarball, because of solaris cc compile
	  support for c99.  r2960 for better configure.
	- better wrongly_truncated check.
	- On Linux, fragment IPv6 datagrams to the IPv6 minimum MTU, to
	  avoid dropped packets at routers.

26 June 2009: Wouter
	- Fix EDNS fallback when EDNS works for short answers but long answers
	  are dropped.

22 June 2009: Wouter
	- fixup iter priv strict aliasing while preserving size of sockaddr.